--- a/rwd_practice_two/style/main.css
+++ b/rwd_practice_two/style/main.css
@@ -13,3 +13,4 @@
 @import url("/style/css/testimonials.css");
 @import url("/style/css/pricing.css");
 @import url("/style/css/contact.css");
+@import url("/style/css/footer.css");
