--- a/rwd_practice_two/style/css/header.css
+++ b/rwd_practice_two/style/css/header.css
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
   height: 78px;
 }
 
@@ -23,3 +22,11 @@
   align-items: center;
   justify-content: center;
 }
+
+/* Desktop */
+@media screen and (min-width: 1025px) {
+  .header-layout {
+    padding: 17px 16px;
+  }
+}
+/* End Desktop */
