--- a/rwd_practice_two/style/css/testimonials.css
+++ b/rwd_practice_two/style/css/testimonials.css
@@ -2,8 +2,6 @@
   width: 100%;
   height: 789px;
   padding: 110px 28px 100px;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   gap: 80px;
 }
@@ -12,8 +10,6 @@
 }
 
 .testimonial-card {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   gap: 44.803px;
 }
@@ -21,6 +17,8 @@
 .testimonial-card > img {
   width: 229px;
   height: 46px;
+  cursor: none;
+  z-index: -1;
 }
 .testimonial-card > p {
   padding: 8.45px;
@@ -32,10 +30,9 @@
 }
 
 .items-span {
-  display: flex;
-  flex-direction: column;
   text-align: left;
 }
+
 .items-span > span:nth-child(1) {
   padding: 1.69px 0px;
 }
