--- a/rwd_practice_two/style/reset/reset.css
+++ b/rwd_practice_two/style/reset/reset.css
@@ -35,7 +35,8 @@ button,
 input,
 img,
 select,
-option {
+option,
+textarea {
   cursor: pointer;
 }
 
@@ -60,4 +61,9 @@ a {
 * {
   padding: 0;
   box-sizing: border-box;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
 }
