--- a/rwd_practice_two/style/css/newsletter.css
+++ b/rwd_practice_two/style/css/newsletter.css
@@ -14,7 +14,7 @@
 }
 
 .items-subscribe {
-  width: 353px;
+  /* width: 353px; */
   gap: 12px;
   padding: 24px 0;
 }
@@ -22,3 +22,18 @@
 .items-subscribe > input {
   padding: 19px 35px;
 }
+
+/* Desktop */
+@media screen and (min-width: 1025px) {
+  .newsletter-layout {
+    height: 560px;
+    padding: 70px 0px;
+  }
+  .newsletter-layout > div > h2:nth-child(2) {
+    display: none;
+  }
+  .newsletter-layout > div > h2:nth-child(3) {
+    padding: 0;
+  }
+}
+/* End Desktop */
