--- a/rwd_practice_two/style/css/feature.css
+++ b/rwd_practice_two/style/css/feature.css
@@ -16,6 +16,7 @@
   gap: 75px;
   padding: 18px 0;
 }
+
 .feature__content-block > li > p {
   padding: 10px 0;
   text-align: left;
@@ -34,4 +35,26 @@
 .item-block > h3 {
   padding: 10px 10px;
   text-align: left;
+}
+
+/* Desktop */
+@media screen and (min-width: 1025px) {
+  .feature-layout {
+    width: 100%;
+    height: 611px;
+    gap: 80px;
+  }
+
+  .feature__content-block {
+    display: flex;
+    flex-direction: row;
+    width: auto;
+    height: 187px;
+    gap: 52px;
+    padding: 0;
+  }
+
+  .feature__content-block > li {
+    width: 255px;
+  }
 }
