--- a/rwd_practice_two/style/css/header.css
+++ b/rwd_practice_two/style/css/header.css
@@ -1,5 +1,6 @@
 .header-layout {
   width: 100%;
+  height: 112px;
   padding: 17px 16px;
   display: flex;
   justify-content: space-between;
@@ -17,16 +18,70 @@
   z-index: 1;
 }
 
-.hamburger-menu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 /* Desktop */
 @media screen and (min-width: 1025px) {
   .header-layout {
-    padding: 17px 16px;
+    display: flex;
+    height: 156px;
+    justify-content: space-between;
+    padding: 38px 40px 40px 20px;
+  }
+
+  .header__nav-form {
+    display: flex;
+    gap: 44px;
+  }
+
+  .nav-items {
+    display: flex;
+    gap: 21px;
+    align-items: center;
+  }
+
+  .header__form {
+    display: flex;
+    gap: 12px;
+  }
+
+  .header__form > input {
+    width: 273px;
+    padding: 19px 39px;
+  }
+
+  .header__form > button > span {
+    width: 141px;
+    padding: 19px 34px;
+    background-color: var(--secondary-text-color);
+    background: -webkit-linear-gradient(40deg, #ef2779 0.79%, #7834be 79.29%);
+    -webkit-background-clip: text;
+    color: transparent;
+    font-family: var(--ff-primary);
   }
 }
 /* End Desktop */
+
+/* Mobile */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .header__form {
+    display: none;
+  }
+
+  .header-layout {
+    display: flex;
+    height: 156px;
+    justify-content: space-between;
+    padding: 38px 40px 40px 20px;
+  }
+
+  .header__nav-form {
+    display: flex;
+    gap: 44px;
+  }
+
+  .nav-items {
+    display: flex;
+    gap: 21px;
+    align-items: center;
+  }
+}
+/* End Tablet */
