--- a/rwd_practice_two/style/css/hero.css
+++ b/rwd_practice_two/style/css/hero.css
@@ -23,3 +23,62 @@
 .hero-title > h4 {
   padding: 10px 10px;
 }
+
+/* Desktop */
+@media screen and (min-width: 1025px) {
+  .hero-layout {
+    height: 792px;
+    padding: 104px 0px;
+    display: grid;
+    grid-template-columns: 62.5% auto;
+    grid-template-areas:
+      "image title"
+      "image button";
+    gap: 60px;
+  }
+
+  .hero-layout > div {
+    grid-area: title;
+    align-self: end;
+  }
+
+  .hero-layout > picture {
+    grid-area: image;
+  }
+
+  .hero-layout > button {
+    grid-area: button;
+    align-self: start;
+  }
+
+  .hero-layout > div > h2 {
+    display: none;
+  }
+
+  .hero-image {
+    width: 100%;
+    height: 573px;
+    border: 0;
+    border-radius: 8px;
+    padding: 27px 0px;
+  }
+}
+/* End Desktop */
+
+/* Tablet */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .hero-layout > div > h2 {
+    display: none;
+  }
+
+  .hero-image {
+    border: 0;
+    border-radius: 8px;
+    padding: 27px 0px;
+  }
+
+  .hero-title {
+    width: auto;
+  }
+}
+/* End Tablet */
