--- a/rwd_practice_two/style/css/introduce-product.css
+++ b/rwd_practice_two/style/css/introduce-product.css
@@ -15,3 +15,25 @@
   height: 225px;
   padding: 6.5px 0;
 }
+
+/* Desktop */
+@media screen and (min-width: 1025px) {
+  .introduce-product-layout {
+    width: 100%;
+    height: 1271px;
+    padding: 80px 0px;
+    gap: 40px;
+  }
+
+  .introduce-product-layout > div,
+  .introduce-btn {
+    margin: 20px;
+  }
+
+  .introduce-image {
+    width: 1141px;
+    height: 686px;
+    padding: 54px;
+  }
+}
+/* End Desktop */
