--- a/rwd_practice_two/style/css/pricing.css
+++ b/rwd_practice_two/style/css/pricing.css
@@ -15,14 +15,16 @@
   color: var(--secondary-text-color);
   background: linear-gradient(40deg, #ef2779 0.79%, #7834be 79.29%);
 }
+
 .pricing__card > li:nth-child(2) > button {
   background-color: var(--secondary-text-color);
   color: var(--primary-color);
 }
 
 .pricing__card-content {
-  width: 335px;
-  height: 310px;
+  max-width: 335px;
+  width: 100%;
+  max-height: 310px;
   padding: 40px;
   gap: 30px;
   border-radius: 10px;
@@ -32,7 +34,8 @@
 }
 
 .pricing__card-content > button {
-  width: 255px;
+  max-width: 255px;
+  width: 100%;
   padding: 18px 38px;
   font-size: var(--fs-x-medium);
   line-height: var(--lh-x-small);
@@ -70,6 +73,28 @@
 
 /* Desktop */
 @media screen and (min-width: 1025px) {
+  .pricing__card-title > h3:nth-child(2) {
+    /* display: none; */
+  }
+
+  .pricing__card > li:nth-child(2) {
+    color: var(--primary-text-color);
+    background: var(--secondary-text-color);
+  }
+  .pricing__card > li:nth-child(2) > button {
+    color: var(--secondary-text-color);
+    background-color: var(--secondary-color);
+  }
+
+  .pricing__card > li:nth-child(3) {
+    color: var(--secondary-text-color);
+    background: linear-gradient(40deg, #ef2779 0.79%, #7834be 79.29%);
+  }
+  .pricing__card > li:nth-child(3) > button {
+    color: var(--primary-color);
+    background: var(--secondary-text-color);
+  }
+
   .pricing-layout {
     height: 734px;
     padding: 100px 0;
@@ -81,9 +106,9 @@
   }
 
   .pricing__card {
-    display: grid;
     justify-content: center;
-    grid-template-columns: 335px 335px 335px;
+    width: 100%;
+    flex-direction: row;
     padding: 0;
   }
 }
