--- a/rwd_practice_two/style/css/component/section.css
+++ b/rwd_practice_two/style/css/component/section.css
@@ -27,7 +27,8 @@
   .newsletter-layout > div > h2:nth-child(3),
   .partner-card > li:nth-child(4),
   li:nth-child(5),
-  li:nth-child(6) {
+  li:nth-child(6)
+  /* .pricing__card-title > h3:nth-child(1)  */ {
     display: none;
   }
 }
