--- a/rwd_practice_two/style/css/hero.css
+++ b/rwd_practice_two/style/css/hero.css
@@ -14,6 +14,7 @@
   border: 0;
   border-radius: 8px;
   padding: 6.5px 0;
+  max-width: 100%;
 }
 
 .hero-title {
@@ -58,8 +59,6 @@
   .hero-image {
     width: 100%;
     height: 573px;
-    border: 0;
-    border-radius: 8px;
     padding: 27px 0px;
   }
 }
@@ -72,8 +71,6 @@
   }
 
   .hero-image {
-    border: 0;
-    border-radius: 8px;
     padding: 27px 0px;
   }
 
