--- a/rwd_practice_two/style/css/newsletter.css
+++ b/rwd_practice_two/style/css/newsletter.css
@@ -1,5 +1,5 @@
 .newsletter-layout {
-  width: 100%;
+  /* width: 100%; */
   height: 600px;
   background: linear-gradient(40deg, #ef2779 0.79%, #7834be 79.29%);
   padding: 80px 0px;
@@ -8,13 +8,15 @@
 }
 
 .form-subscribe {
-  width: 373px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 373px;
   gap: 10px;
-  padding: 10px 10px;
+  padding: 10px;
 }
 
 .items-subscribe {
-  /* width: 353px; */
   gap: 12px;
   padding: 24px 0;
 }
