--- a/rwd_practice_two/style/css/component/hamburger-menu.css
+++ b/rwd_practice_two/style/css/component/hamburger-menu.css
@@ -72,13 +72,11 @@
   top: 112px;
   right: -100%;
 
-  width: 300px;
-  height: 100%;
+  width: 200px;
+  height: 275px;
 
   margin: 0;
-  padding: 80px 0;
-
-  list-style: none;
+  padding: 40px 0;
 
   background-color: var(--secondary-text-color);
   box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
@@ -88,18 +86,14 @@
 
 .menu__item {
   display: block;
-  padding: 12px 24px;
+  padding: 6px 12px;
 
   color: #333;
 
-  font-family: "Roboto", sans-serif;
-  font-size: 20px;
-  font-weight: 600;
-
-  text-decoration: none;
-
-  transition-duration: 0.25s;
+  transition-duration: 0.5s;
 }
-.menu__item:hover {
-  background: linear-gradient(40deg, #ef2779 0.79%, #7834be 79.29%);
+
+.menu__item:hover,
+.menu__item:focus {
+  box-shadow: inset 200px 0 0 0 var(--primary-color);
 }
