--- a/rwd_practice_two/style/css/footer.css
+++ b/rwd_practice_two/style/css/footer.css
@@ -1,5 +1,5 @@
 .footer-layout {
-  height: 1109px;
+  width: 100%;
   gap: 55px;
   align-items: center;
   padding: 126px 30px;
@@ -55,6 +55,7 @@
   border-radius: 22px;
   width: 100%;
   max-width: 358px;
+  height: 247px;
   aspect-ratio: 1.4;
   overflow: hidden;
 }
@@ -64,10 +65,50 @@
   height: 247px;
 }
 
+.footer-address > div > a:hover,
+.link-items > li > a:hover {
+  text-decoration: underline;
+}
+
+/* Tablet */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .footer-layout {
+    gap: 55px;
+    display: grid;
+    grid-template-rows: 247px 267px;
+    grid-template-areas:
+      "map map"
+      "link-page social";
+    padding: 120px 50px;
+    justify-content: center;
+  }
+
+  .footer__link-page {
+    grid-area: link-page;
+  }
+
+  .footer-map {
+    grid-area: map;
+    width: 100%;
+    justify-self: center;
+  }
+  .footer__social-network {
+    grid-area: social;
+  }
+
+  .footer-map > iframe {
+    height: 250px;
+  }
+
+  .link-items {
+    align-items: start;
+  }
+}
+/* End Tablet */
+
 /* Desktop */
 @media screen and (min-width: 1025px) {
   .footer-layout {
-    height: 507px;
     gap: 55px;
     flex-direction: row;
     justify-content: center;
@@ -89,37 +130,9 @@
     width: 472px;
     height: 247px;
   }
+
+  .link-items {
+    align-items: start;
+  }
 }
 /* End Desktop */
-
-/* Tablet */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .footer-layout {
-    height: 810px;
-    gap: 55px;
-    display: grid;
-    grid-template-rows: 247px 267px;
-    grid-template-areas:
-      "map map"
-      "link-page social";
-    padding: 120px 50px;
-    justify-content: center;
-  }
-
-  .footer__link-page {
-    grid-area: link-page;
-  }
-  .footer-map {
-    grid-area: map;
-    width: 100%;
-    justify-self: center;
-  }
-  .footer__social-network {
-    grid-area: social;
-  }
-
-  .footer-map > iframe {
-    height: 250px;
-  }
-}
-/* End Tablet */
