--- a/rwd_practice_two/style/css/component/section.css
+++ b/rwd_practice_two/style/css/component/section.css
@@ -22,13 +22,13 @@
 }
 
 @media screen and (max-width: 767px) {
+  .header__form,
   .header__nav-form,
   .hero-title > h1,
   .newsletter-layout > div > h2:nth-child(3),
   .partner-card > li:nth-child(4),
-  li:nth-child(5),
-  li:nth-child(6)
-  /* .pricing__card-title > h3:nth-child(1)  */ {
+  .partner-card > li:nth-child(5),
+  .partner-card > li:nth-child(6) {
     display: none;
   }
 }
