--- a/rwd_practice_two/style/css/contact.css
+++ b/rwd_practice_two/style/css/contact.css
@@ -1,6 +1,5 @@
 .contact-layout {
   width: 100%;
-  height: 1512px;
   padding: 149px 0px;
   align-items: center;
   gap: 50px;
@@ -11,6 +10,7 @@
   display: flex;
   gap: 24px;
   padding: 10px 10px;
+  height: 61px;
 }
 
 .social-network-items > a > img {
@@ -22,6 +22,10 @@
   gap: 10px;
   padding: 18px 0;
   width: 264px;
+}
+
+.contact-address > div > a:hover {
+  text-decoration: underline;
 }
 
 .contact-address > div {
@@ -78,10 +82,9 @@ textarea::placeholder {
   padding: 18px 38px;
 }
 
-/* Desktop */
-@media screen and (min-width: 1025px) {
+/* Tablet & Desktop */
+@media screen and (min-width: 768px) {
   .contact-layout {
-    height: 794px;
     padding: 85px 0px;
     gap: 50px 65px;
     background: #252b42;
@@ -92,10 +95,11 @@ textarea::placeholder {
       "contact-form address"
       "contact-form social";
   }
+
   .contact-layout > div:nth-child(1) {
     grid-area: contact-title;
-    width: 318px;
     justify-self: center;
+    width: 318px;
   }
 
   .contact-layout > div:nth-child(2) {
@@ -148,76 +152,4 @@ textarea::placeholder {
     line-height: 10px;
   }
 }
-/* End Desktop */
-
-/* Desktop */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .contact-layout {
-    height: 794px;
-    padding: 85px 0px;
-    gap: 50px 50px;
-    background: #252b42;
-    display: grid;
-    grid-template-rows: auto 152px auto;
-    grid-template-areas:
-      "contact-title contact-title"
-      "contact-form address"
-      "contact-form social";
-  }
-  .contact-layout > div:nth-child(1) {
-    grid-area: contact-title;
-    width: 318px;
-    justify-self: center;
-  }
-
-  .contact-layout > div:nth-child(2) {
-    grid-area: social;
-    align-self: start;
-  }
-
-  .contact-layout > address:nth-child(3) {
-    grid-area: address;
-    align-self: start;
-    padding: 0;
-  }
-
-  .contact-layout > form:nth-child(4) {
-    grid-area: contact-form;
-    align-items: start;
-    padding: 79px 41px 26px;
-    justify-self: end;
-  }
-
-  .contact-form {
-    width: 401px;
-    height: 430px;
-    padding: 19px 20px;
-    gap: 31px;
-  }
-
-  .contact-form > input {
-    width: 319px;
-    height: 36px;
-    padding: 19px 13px;
-  }
-
-  .contact-form > textarea {
-    width: 319px;
-    height: 127px;
-    padding: 15px 13px;
-  }
-
-  .contact-form > input::placeholder,
-  textarea::placeholder {
-    font-size: 10px;
-    line-height: 10px;
-  }
-
-  .contact-form > button {
-    width: 95px;
-    padding: 18px 38px;
-    font-size: 10px;
-    line-height: 10px;
-  }
-}
-/* End Desktop */
+/* End Tablet & Desktop */
