--- a/rwd_practice_two/style/css/feature.css
+++ b/rwd_practice_two/style/css/feature.css
@@ -1,6 +1,5 @@
 .feature-layout {
   width: 100%;
-  height: 1108px;
   padding: 80px 0px;
   align-items: center;
   gap: 50px;
@@ -22,12 +21,21 @@
   text-align: left;
 }
 
+.feature__content-block > li {
+  transition: transform 0.2s ease;
+}
+
+.feature__content-block > li:hover {
+  transform: scale(1.1);
+}
+
 .item-block {
   display: flex;
   align-items: center;
 }
 
-.item-block > img {
+.item-block > img,
+.item-block > picture > img {
   width: 43px;
   height: 43px;
 }
@@ -58,3 +66,4 @@
     width: 255px;
   }
 }
+/* End Desktop */
