--- a/rwd_practice_two/style/css/header.css
+++ b/rwd_practice_two/style/css/header.css
@@ -1,28 +1,28 @@
 .header-layout {
   width: 100%;
-  height: 112px;
   padding: 17px 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 78px;
 }
 
 .header-logo {
-  width: 186px;
-  height: 58px;
-  padding: 10px;
+  width: 206px;
+  height: 78px;
   display: flex;
   align-items: center;
   flex-shrink: 1;
   z-index: 1;
 }
 
-/* Desktop */
-@media screen and (min-width: 1025px) {
+.nav-items > a:hover {
+  color: var(--primary-color);
+}
+
+/* Tablet & Desktop */
+@media screen and (min-width: 768px) {
   .header-layout {
     display: flex;
-    height: 156px;
     justify-content: space-between;
     padding: 38px 40px 40px 20px;
   }
@@ -31,13 +31,24 @@
     display: flex;
     gap: 44px;
   }
-
   .nav-items {
     display: flex;
     gap: 21px;
     align-items: center;
   }
+}
+/* End Tablet & Desktop */
 
+/* Tablet */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .header__form {
+    display: none;
+  }
+}
+/* End Tablet */
+
+/* Desktop */
+@media screen and (min-width: 1025px) {
   .header__form {
     display: flex;
     gap: 12px;
@@ -49,9 +60,7 @@
   }
 
   .header__form > button > span {
-    width: 141px;
     padding: 19px 34px;
-    background-color: var(--secondary-text-color);
     background: -webkit-linear-gradient(40deg, #ef2779 0.79%, #7834be 79.29%);
     -webkit-background-clip: text;
     color: transparent;
@@ -59,29 +68,3 @@
   }
 }
 /* End Desktop */
-
-/* Mobile */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .header__form {
-    display: none;
-  }
-
-  .header-layout {
-    display: flex;
-    height: 156px;
-    justify-content: space-between;
-    padding: 38px 40px 40px 20px;
-  }
-
-  .header__nav-form {
-    display: flex;
-    gap: 44px;
-  }
-
-  .nav-items {
-    display: flex;
-    gap: 21px;
-    align-items: center;
-  }
-}
-/* End Tablet */
