--- a/rwd_practice_two/style/css/hero.css
+++ b/rwd_practice_two/style/css/hero.css
@@ -1,8 +1,6 @@
 .hero-layout {
   width: 100%;
-  height: 769px;
   padding: 80px 20px;
-
   align-items: center;
   gap: 59px;
   background-size: cover;
@@ -10,10 +8,9 @@
 
 .hero-image {
   width: 379px;
-  height: 225px;
+  height: 221px;
   border: 0;
   border-radius: 8px;
-  padding: 6.5px 0;
   max-width: 100%;
 }
 
@@ -25,12 +22,24 @@
   padding: 10px 10px;
 }
 
+/* Tablet */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .hero-image {
+    padding: 27px 0px;
+  }
+
+  .hero-title {
+    width: auto;
+  }
+}
+/* End Tablet */
+
 /* Desktop */
 @media screen and (min-width: 1025px) {
   .hero-layout {
-    height: 792px;
     padding: 104px 0px;
     display: grid;
+    grid-template-rows: 282px;
     grid-template-columns: 62.5% auto;
     grid-template-areas:
       "image title"
@@ -58,24 +67,8 @@
 
   .hero-image {
     width: 100%;
-    height: 573px;
+    height: 580px;
     padding: 27px 0px;
   }
 }
 /* End Desktop */
-
-/* Tablet */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .hero-layout > div > h2 {
-    display: none;
-  }
-
-  .hero-image {
-    padding: 27px 0px;
-  }
-
-  .hero-title {
-    width: auto;
-  }
-}
-/* End Tablet */
