--- a/rwd_practice_two/style/css/newsletter.css
+++ b/rwd_practice_two/style/css/newsletter.css
@@ -1,6 +1,5 @@
 .newsletter-layout {
-  /* width: 100%; */
-  height: 600px;
+  width: 100%;
   background: linear-gradient(40deg, #ef2779 0.79%, #7834be 79.29%);
   padding: 80px 0px;
   align-items: center;
@@ -28,8 +27,7 @@
 /* Desktop */
 @media screen and (min-width: 1025px) {
   .newsletter-layout {
-    height: 560px;
-    padding: 70px 0px;
+    padding: 80px 0px 70px;
   }
   .newsletter-layout > div > h2:nth-child(2) {
     display: none;
