--- a/rwd_practice_two/style/css/pricing.css
+++ b/rwd_practice_two/style/css/pricing.css
@@ -1,6 +1,5 @@
 .pricing-layout {
   width: 100%;
-  height: 1501px;
   padding: 110px 28px 100px;
   gap: 80px;
 }
@@ -21,11 +20,15 @@
   color: var(--primary-color);
 }
 
+.pricing__card > li:nth-child(2) > button:hover {
+  color: var(--secondary-text-color);
+}
+
 .pricing__card-content {
   max-width: 335px;
   width: 100%;
   max-height: 310px;
-  padding: 40px;
+  padding: 40px 38.4px;
   gap: 30px;
   border-radius: 10px;
   border: 1px solid #dedede;
@@ -71,16 +74,21 @@
   padding: 0;
 }
 
+/* Tablet */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .pricing-layout {
+    height: auto;
+  }
+}
+/* End Tablet */
+
 /* Desktop */
 @media screen and (min-width: 1025px) {
-  .pricing__card-title > h3:nth-child(2) {
-    /* display: none; */
-  }
-
   .pricing__card > li:nth-child(2) {
     color: var(--primary-text-color);
     background: var(--secondary-text-color);
   }
+
   .pricing__card > li:nth-child(2) > button {
     color: var(--secondary-text-color);
     background-color: var(--secondary-color);
@@ -90,13 +98,17 @@
     color: var(--secondary-text-color);
     background: linear-gradient(40deg, #ef2779 0.79%, #7834be 79.29%);
   }
+
   .pricing__card > li:nth-child(3) > button {
     color: var(--primary-color);
     background: var(--secondary-text-color);
   }
 
+  .pricing__card > li:nth-child(3) > button:hover {
+    color: var(--secondary-text-color);
+  }
+
   .pricing-layout {
-    height: 734px;
     padding: 100px 0;
     align-items: center;
   }
