--- a/rwd_practice_two/style/css/testimonials.css
+++ b/rwd_practice_two/style/css/testimonials.css
@@ -1,21 +1,22 @@
 .testimonial-layout {
   width: 100%;
-  height: 789px;
   padding: 110px 28px 100px;
   align-items: center;
   gap: 80px;
 }
 
 .testimonial-layout > button {
-  width: 280px;
+  padding: 16px 47px;
+  font-family: var(--ff-primary);
+  max-width: 280px;
 }
 
 .testimonial-card {
   align-items: center;
-  gap: 44.8px;
+  gap: 45px;
 }
 
-.testimonial-card > picture > img {
+.testimonial-card > img {
   width: 229px;
   height: 46px;
   cursor: none;
@@ -23,12 +24,18 @@
 }
 
 .testimonial-card > p {
-  padding: 8.45px;
+  padding: 8.5px;
 }
 
 .testimonial__card-items {
   display: flex;
   gap: 11px;
+  height: 43px;
+}
+
+.testimonial__card-items > picture > img {
+  width: 43px;
+  height: 43px;
 }
 
 .items-span {
@@ -36,13 +43,12 @@
 }
 
 .items-span > span:nth-child(1) {
-  padding: 1.69px 0px;
+  padding: 1.7px 0px;
 }
 
 /* Desktop */
 @media screen and (min-width: 1025px) {
   .testimonial-layout {
-    height: 758px;
     padding: 100px 0px;
   }
 
@@ -51,17 +57,19 @@
     gap: 50px;
     width: 703px;
   }
-  .testimonial-card > picture > img {
-    width: 152px;
-    height: 50px;
+
+  .testimonial-card > p {
+    padding: 10px;
   }
 
-  .testimonial-card > img {
-    height: 46px;
+  .testimonial__card-items {
+    display: flex;
+    gap: 11px;
+    height: 50px;
   }
-  .testimonial-card > p {
-    font-size: var(--fs-x-medium);
-    line-height: var(--lh-x-medium);
+  .testimonial__card-items > picture > img {
+    width: 50px;
+    height: 50px;
   }
 }
 /* End Desktop */
