--- a/rwd_practice_two/style/css/partner.css
+++ b/rwd_practice_two/style/css/partner.css
@@ -16,6 +16,10 @@
   width: 238px;
 }
 
+.partner-card > li {
+  cursor: pointer;
+}
+
 .partner__card-content {
   gap: 15px;
   align-items: center;
