--- a/rwd_practice_two/style/css/hero.css
+++ b/rwd_practice_two/style/css/hero.css
@@ -51,10 +51,12 @@
   .hero-layout > div {
     grid-area: title;
     align-self: end;
+    gap: 17px;
   }
 
   .hero-layout > div > h4 {
     text-align: start;
+    padding: 10px 0;
   }
 
   .hero-layout > picture {
@@ -77,6 +79,10 @@
     width: 100%;
     height: 580px;
     padding: 27px 0px;
+  }
+
+  .hero-title > h1 {
+    text-align: start;
   }
 }
 /* End Desktop */
