fix comment of mentor

--- a/rwd_practice_two/src/style/css/component/background.css
+++ b/rwd_practice_two/src/style/css/component/background.css
@@ -15,7 +15,7 @@
 }
 
 /* Desktop */
-@media screen and (min-width: 1025px) {
+@media (min-width: 1025px) {
   .background-image > picture > img {
     height: 948px;
     max-width: 100%;
