--- a/rwd_practice_two/src/style/css/hero.css
+++ b/rwd_practice_two/src/style/css/hero.css
@@ -23,7 +23,7 @@
 }
 
 /* Tablet */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   .hero-image {
     padding: 27px 0px;
   }
@@ -35,7 +35,7 @@
 /* End Tablet */
 
 /* Desktop */
-@media screen and (min-width: 1025px) {
+@media (min-width: 1025px) {
   .hero-layout {
     padding: 104px 0px;
     display: grid;
