--- a/rwd_practice_two/src/style/css/introduce-product.css
+++ b/rwd_practice_two/src/style/css/introduce-product.css
@@ -13,11 +13,10 @@
   width: 379px;
   max-width: 100%;
   height: 221px;
-  cursor: default;
 }
 
 /* Desktop */
-@media screen and (min-width: 1025px) {
+@media (min-width: 1025px) {
   .introduce-product-layout {
     width: 100%;
     padding: 80px 0px;
