--- a/rwd_practice_two/src/style/css/newsletter.css
+++ b/rwd_practice_two/src/style/css/newsletter.css
@@ -25,7 +25,7 @@
 }
 
 /* Desktop */
-@media screen and (min-width: 1025px) {
+@media (min-width: 1025px) {
   .newsletter-layout {
     padding: 80px 0px 70px;
   }
