--- a/rwd_practice_two/src/style/css/pricing.css
+++ b/rwd_practice_two/src/style/css/pricing.css
@@ -24,18 +24,6 @@
   color: var(--secondary-text-color);
 }
 
-.pricing__card-content {
-  max-width: 335px;
-  width: 100%;
-  max-height: 310px;
-  padding: 40px 38.4px;
-  gap: 30px;
-  border-radius: 10px;
-  border: 1px solid #dedede;
-  background: var(--secondary-text-color);
-  box-shadow: 0px 13px 19px 0px rgba(0, 0, 0, 0.07);
-}
-
 .pricing__card-content > button {
   max-width: 255px;
   width: 100%;
@@ -75,7 +63,7 @@
 }
 
 /* Tablet */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   .pricing-layout {
     height: auto;
   }
@@ -83,7 +71,7 @@
 /* End Tablet */
 
 /* Desktop */
-@media screen and (min-width: 1025px) {
+@media (min-width: 1025px) {
   .pricing__card > li:nth-child(2) {
     color: var(--primary-text-color);
     background: var(--secondary-text-color);
