--- a/rwd_practice_two/src/style/main.css
+++ b/rwd_practice_two/src/style/main.css
@@ -1,5 +1,14 @@
 @import url("variable/variable.css");
 @import url("/style/css/component/hamburger-menu.css");
+@import url("/style/css/component/hiden.css");
+@import url("/style/css/component/nav.css");
+@import url("/style/css/component/form-subscibe.css");
+@import url("/style/css/component/header-logo.css");
+@import url("/style/css/component/feature-list.css");
+@import url("/style/css/component/partner-list.css");
+@import url("/style/css/component/pricing-card.css");
+@import url("/style/css/component/form-contact.css");
+@import url("/style/css/component/social.css");
 @import url("/style/css/component/title.css");
 @import url("/style/css/component/section.css");
 @import url("/style/css/component/button.css");
