--- a/rwd_practice_two/src/style/css/header.css
+++ b/rwd_practice_two/src/style/css/header.css
@@ -9,8 +9,6 @@
 .header-logo {
   width: 206px;
   height: 78px;
-  display: flex;
-  align-items: center;
   flex-shrink: 1;
   z-index: 1;
 }
@@ -25,6 +23,10 @@
     display: flex;
     justify-content: space-between;
     padding: 38px 40px 40px 20px;
+  }
+
+  .header-logo {
+    margin: 0px 20px;
   }
 }
 /* End Tablet & Desktop */
