--- a/rwd_practice_two/src/style/css/hero.css
+++ b/rwd_practice_two/src/style/css/hero.css
@@ -50,7 +50,6 @@
   .hero-layout > div {
     grid-area: title;
     align-self: end;
-    gap: 17px;
   }
 
   .hero-layout > div > h4 {
@@ -82,6 +81,7 @@
 
   .hero-title > h1 {
     text-align: start;
+    padding: 10px 0;
   }
 }
 /* End Desktop */
