--- a/rwd_practice_two/src/style/util/util.css
+++ b/rwd_practice_two/src/style/util/util.css
@@ -1,3 +1,12 @@
+.display--flex {
+  display: flex;
+  flex-direction: column;
+}
+
+.gap--7 {
+  gap: 7px;
+}
+
 @media (max-width: 767px) {
   .hiden-mobile {
     display: none;
