fix comment of mentor

--- a/rwd_practice_two/src/style/css/component/title.css
+++ b/rwd_practice_two/src/style/css/component/title.css
@@ -41,7 +41,7 @@
   padding: 10px 10px;
 }
 
-/* Paragraphe */
+/* Paragraphy */
 .text-p {
   font-size: var(--fs-medium);
   font-weight: var(--fw-small);
